# Testio

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  todo.md
.cache/v/cache/: lastfailed
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml  nuitka-build.yml  python-app.yml  release.yml
docs/: modules.rst
docs/source/: conf.py  index.rst
examples/: .gitignore
examples/c_calculator/: README.md  calculator  calculator.c  config.json
examples/c_hello_world/: README.md  config.json
examples/execution_errror/: README.md  config.json
examples/failed_test/: README.md  config.json
examples/homework_mode_demo/: README.md  alice_perfect.py  bob_bug.py  charlie_incomplete.py  config.json
examples/interleaved_io/: README.md  config.json  program.py
examples/interleaved_io_complex/: README.md  calculator.py  config.json
examples/multiple_inputs/: README.md
examples/multiple_programs/: config.json
examples/multiple_programs/Programs/: program5.py
examples/multiple_programs_tested/: README.md  config.json
examples/multiple_tests/: README.md  config.json
examples/multiple_tests_multiple_files/: config.json
examples/multiple_tests_multiple_files/scripts/: main_c.py
examples/no_input/: README.md  config.json  program.py
examples/node_hello_world/: config.json  hello.js
examples/program_with_error/: config.json
examples/regex_output_matching/: README.md  config.json  config_mismatch.json  example_mismatch.py  example_program.py
examples/ruby_hello_world/: README.md  config.json
examples/single_input/: README.md  config.json  program.py
examples/timeout_exceeded/: README.md  config.json  program.py
hooks/: linters.sh  remove_carriage_return.py  run_all.sh  setup_hooks.sh
schemas/: testio-config.schema.json
scripts/: student_cli.py  student_ui.py  teacher_cli.py  teacher_ui.py
src/: config.json  main.py  main_command_line.py  misc.py  output_comparator.py  parsers.py  program_output.py  string_consts.py  test.py  testio.py
src/apps/cli/: main.py  result_renderer.py  string_consts.py
src/apps/gui/: index.html  main.py
src/apps/server/: auth.py  main.py  middleware.py  rate_limiter.py  settings.py  validation.py
src/core/: logging_config.py  output_comparator.py  parsers.py  program_runner.py
src/core/caching/: __init__.py  memory_cache.py
src/core/config_parser/: data.py  parsers.py
src/core/execution/: command_utils.py  (+10 more)
src/flask_app/: flask_app.py
src/testio_base/: output_comparator.py  parsers.py  program_output.py
src/testio_core/: output_comparator.py  parsers.py  program_runner.py  string_consts.py
src/tests/: test_parser.py  test_program_output.py
tests/: test_parser.py  test_program_output.py
(+110 files in other folders)
