[tool.poetry]
name = "testio"
version = "0.1.0"
description = "Testio is a lightweight framework designed for testing applications' standard output."
authors = ["djeada <addjellouli1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Babel = "2.9.0"
certifi = "2020.12.5"
chardet = "4.0.0"
colorama = "0.4.4"
docutils = "0.16"
fpdf = "1.7.2"
idna = "2.10"
imagesize = "1.2.0"
Jinja2 = "2.11.3"
MarkupSafe = "1.1.1"
packaging = "20.9"
Pygments = "2.8.1"
pyparsing = "2.4.7"
pytz = "2021.1"
requests = "2.25.1"
snowballstemmer = "2.1.0"
Sphinx = "3.5.4"
sphinx-rtd-theme = "0.5.2"
sphinxcontrib-applehelp = "1.0.2"
sphinxcontrib-devhelp = "1.0.2"
sphinxcontrib-htmlhelp = "1.0.3"
sphinxcontrib-jsmath = "1.0.1"
sphinxcontrib-qthelp = "1.0.3"
sphinxcontrib-serializinghtml = "1.1.4"
urllib3 = "1.26.4"
alabaster = "^0.7.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
